<resources>
    <string name="app_name">Fetch Demo</string>
    <string name="pause">PAUSE</string>
    <string name="resume">RESUME</string>
    <string name="permission_not_enabled">Please enable the Write External Storage Permission</string>
    <string name="delete_files">Delete Downloads test files from the file system and try again.</string>
    <string name="delete_title">Are you sure you want to delete %1$s?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="view">VIEW</string>
    <string name="wifiOnly">WiFi Only</string>
    <string name="retry">RETRY</string>
    <string name="start">Start</string>
    <string name="complete_over">%1$d/%2$d</string>
    <string name="start_fetching">Click start to start fetching game files.</string>
    <string name="fetch_started">Fetching Game Files…</string>
    <string name="fetch_done">Fetching done.</string>
    <string name="fetch_failed">An error occurred whiles fetching the game files.</string>
    <string name="reset">RESET</string>
    <string name="single_download_demo">Single Download Demo</string>
    <string name="download_list_demo">Download List Demo</string>
    <string name="game_file_download_demo">Game File Download Demo</string>
    <string name="percent_progress">%1$d%%</string>
    <string name="downloading">downloading…</string>
    <string name="queued">QUEUED</string>
    <string name="status_unknown">Status Unknown</string>
    <string name="delete_all_files">Delete Downloaded Files</string>
    <string name="downloaded_files_deleted">Downloads Files Deleted</string>
    <string name="game_download_error">An error occurred, could not get game files.</string>
    <string name="failed_multi_enqueue">Failed Multi Enqueue Demo</string>
    <string name="multi_fragment">MULTI FRAGMENT DEMO</string>
    <string name="enqueue_error">Could not enqueue this request. Check logcat.</string>
    <string name="download_eta_sec">%1$ds left</string>
    <string name="download_eta_min">%1$dm %2$ds left</string>
    <string name="download_eta_hrs">%1$dh %2$dm %3$ds left</string>
    <string name="download_speed_bytes">%1$d B/s</string>
    <string name="download_speed_kb">%1$s KB/s</string>
    <string name="download_speed_mb">%1$s MB/s</string>

    <string name="service_samples">Service Downloads Demos</string>
    <string name="service_single_download_demo">Service Single Download Demo</string>
    <string name="service_download_list_demo">Service Download List Demo</string>
    <string name="service_game_file_download_demo">Service Game File Download Demo</string>
    <string name="multi_enqueue">Multi Enqueue Demo</string>
    <string name="service_multi_enqueue">Service Multi Enqueue Demo</string>
</resources>
