<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/singleDemoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/single_download_demo" />

        <Button
            android:id="@+id/downloadListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/download_list_demo" />

        <Button
            android:id="@+id/gameFilesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/game_file_download_demo" />

        <Button
            android:id="@+id/multiEnqueueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/failed_multi_enqueue" />

        <Button
            android:id="@+id/multiFragmentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/multi_fragment" />

        <Button
            android:id="@+id/deleteAllButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/delete_all_files" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:text="@string/service_samples"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"/>

        <Button
            android:id="@+id/serviceSingleDemoButton"
            android:text="@string/service_single_download_demo"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/serviceDownloadListButton"
            android:text="@string/service_download_list_demo"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/serviceGameFilesButton"
            android:text="@string/service_game_file_download_demo"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/serviceMultiEnqueueButton"
            android:text="@string/multi_enqueue"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>
